<resources>
    <string name="app_name">TechnologiesOnline</string>
    <string name="home">Home</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="news">News</string>
    <string name="fun_stuff">Fun Stuff</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="techie_desi">Techie Desi</string>
</resources>
