<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_android"
            android:title="@string/android" />

        <item
            android:id="@+id/nav_ios"
            android:title="@string/ios" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_fun"
            android:title="@string/fun_stuff" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_aboutus"
            android:title="@string/about_us" />
    </group>
</menu>